--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@modelcontextprotocol/sdk": "^1.7.0",
     "axios": "^1.8.3",
     "express": "^5.0.1",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0",
     "winston": "^3.17.0",
