--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: whatsapp-integration
     env: node
     buildCommand: npm install
-    startCommand: npx ts-node --transpile-only src/minimal-server.ts
+    startCommand: node server.js
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
