Integrate WhatsApp API with official TypeScript implementation
- Configure Express server to start immediately before WhatsApp client init
- Add /wa-api endpoint for backward compatibility with previous implementation
- Use WhatsApp API mode with TypeScript (no render-deploy.ts needed)
- Add build:force script to handle TypeScript compilation errors
- Update render.yaml for optimized Render Web Service deployment
- Create test-local.sh for easy local testing
- Preserve key learnings from previous implementation:
  - Immediate server startup (not blocking on WhatsApp init)
  - Proper /health endpoint for Render detection
  - QR code access via /qr endpoint
  - Robust error handling

--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,14 @@ services:
   - type: web
     name: whatsapp-integration
     env: node
-    buildCommand: npm install
-    startCommand: node src/server.js
+    buildCommand: npm install && npm run build:force
+    startCommand: node dist/main.js --mode whatsapp-api --api-port 3000 --auth-data-path /app/.wwebjs_auth --log-level info
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 3000
+      - key: DOCKER_CONTAINER
+        value: "true"
     plan: free
