--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: whatsapp-integration
     env: node
-    buildCommand: npm install && npm run build:force
-    startCommand: node dist/main.js --mode whatsapp-api --api-port 3000 --auth-data-path /app/.wwebjs_auth --log-level info
+    buildCommand: npm install
+    startCommand: node --trace-warnings src/server.js
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
